Fix high contrast colors for Edge/IE11

--- a/packages/office-ui-fabric-react/src/components/Slider/Slider.scss
+++ b/packages/office-ui-fabric-react/src/components/Slider/Slider.scss
@@ -22,10 +22,12 @@
 
 .activeSection {
   background: $ms-color-neutralSecondary;
+  @include highContrastAdjust();
 }
 
 .inactiveSection {
   background: $ms-color-neutralTertiaryAlt;
+  @include highContrastAdjust();
 }
 
 .showTransitions {
